--- a/BlazorApp2/WebBasics.csproj
+++ b/BlazorApp2/WebBasics.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BlazorAnimate" Version="3.0.0" />
+  </ItemGroup>
+
 </Project>
